# crates/rest-handlers/generated/rest-server/src/models.rs
@@ -71,20 +71,255 @@ pub fn check_xss_map<T>(
 #[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize, validator::Validate)]
 #[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))]
 pub struct DeleteBlobPathParams {
-    pub container_meta_id: String,
+    pub id: uuid::Uuid,
 }
 
 #[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize, validator::Validate)]
 #[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))]
 pub struct DownloadBlobPathParams {
-    pub container_meta_id: String,
+    pub id: uuid::Uuid,
 }
 
 #[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize, validator::Validate)]
 #[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))]
-pub struct UploadBlobQueryParams {
-    #[serde(rename = "filename")]
-    pub filename: String,
+pub struct GetBlobMetadataPathParams {
+    pub id: uuid::Uuid,
+}
+
+#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize, validator::Validate)]
+#[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))]
+pub struct UploadBlobHeaderParams {
+    pub content_disposition: String,
+}
+
+#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize, validator::Validate)]
+#[cfg_attr(feature = "conversion", derive(frunk::LabelledGeneric))]
+pub struct ContainerMetaResponse {
+    #[serde(rename = "id")]
+    pub id: uuid::Uuid,
+
+    #[serde(rename = "title")]
+    #[validate(custom(function = "check_xss_string"))]
+    pub title: String,
+
+    #[serde(rename = "description")]
+    #[validate(custom(function = "check_xss_string"))]
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub description: Option<String>,
+
+    #[serde(rename = "tags")]
+    #[validate(custom(function = "check_xss_vec_string"))]
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub tags: Option<Vec<String>>,
+
+    #[serde(rename = "fileSizeInKb")]
+    pub file_size_in_kb: i64,
+
+    #[serde(rename = "duration")]
+    pub duration: f64,
+
+    #[serde(rename = "dateTimeCreated")]
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub date_time_created: Option<chrono::DateTime<chrono::Utc>>,
+
+    #[serde(rename = "dateTimeUpdated")]
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub date_time_updated: Option<chrono::DateTime<chrono::Utc>>,
+}
+
+impl ContainerMetaResponse {
+    #[allow(clippy::new_without_default, clippy::too_many_arguments)]
+    pub fn new(
+        id: uuid::Uuid,
+        title: String,
+        file_size_in_kb: i64,
+        duration: f64,
+    ) -> ContainerMetaResponse {
+        ContainerMetaResponse {
+            id,
+            title,
+            description: None,
+            tags: None,
+            file_size_in_kb,
+            duration,
+            date_time_created: None,
+            date_time_updated: None,
+        }
+    }
+}
+
+/// Converts the ContainerMetaResponse value to the Query Parameters representation (style=form, explode=false)
+/// specified in https://swagger.io/docs/specification/serialization/
+/// Should be implemented in a serde serializer
+impl std::fmt::Display for ContainerMetaResponse {
+    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
+        let params: Vec<Option<String>> = vec![
+            // Skipping id in query parameter serialization
+            Some("title".to_string()),
+            Some(self.title.to_string()),
+            self.description
+                .as_ref()
+                .map(|description| ["description".to_string(), description.to_string()].join(",")),
+            self.tags.as_ref().map(|tags| {
+                [
+                    "tags".to_string(),
+                    tags.iter()
+                        .map(|x| x.to_string())
+                        .collect::<Vec<_>>()
+                        .join(","),
+                ]
+                .join(",")
+            }),
+            Some("fileSizeInKb".to_string()),
+            Some(self.file_size_in_kb.to_string()),
+            Some("duration".to_string()),
+            Some(self.duration.to_string()),
+            // Skipping dateTimeCreated in query parameter serialization
+
+            // Skipping dateTimeUpdated in query parameter serialization
+        ];
+
+        write!(
+            f,
+            "{}",
+            params.into_iter().flatten().collect::<Vec<_>>().join(",")
+        )
+    }
+}
+
+/// Converts Query Parameters representation (style=form, explode=false) to a ContainerMetaResponse value
+/// as specified in https://swagger.io/docs/specification/serialization/
+/// Should be implemented in a serde deserializer
+impl std::str::FromStr for ContainerMetaResponse {
+    type Err = String;
+
+    fn from_str(s: &str) -> std::result::Result<Self, Self::Err> {
+        /// An intermediate representation of the struct to use for parsing.
+        #[derive(Default)]
+        #[allow(dead_code)]
+        struct IntermediateRep {
+            pub id: Vec<uuid::Uuid>,
+            pub title: Vec<String>,
+            pub description: Vec<String>,
+            pub tags: Vec<Vec<String>>,
+            pub file_size_in_kb: Vec<i64>,
+            pub duration: Vec<f64>,
+            pub date_time_created: Vec<chrono::DateTime<chrono::Utc>>,
+            pub date_time_updated: Vec<chrono::DateTime<chrono::Utc>>,
+        }
+
+        let mut intermediate_rep = IntermediateRep::default();
+
+        // Parse into intermediate representation
+        let mut string_iter = s.split(',');
+        let mut key_result = string_iter.next();
+
+        while key_result.is_some() {
+            let val = match string_iter.next() {
+                Some(x) => x,
+                None => {
+                    return std::result::Result::Err(
+                        "Missing value while parsing ContainerMetaResponse".to_string(),
+                    );
+                }
+            };
+
+            if let Some(key) = key_result {
+                #[allow(clippy::match_single_binding)]
+                match key {
+                    #[allow(clippy::redundant_clone)]
+                    "id" => intermediate_rep.id.push(<uuid::Uuid as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
+                    #[allow(clippy::redundant_clone)]
+                    "title" => intermediate_rep.title.push(<String as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
+                    #[allow(clippy::redundant_clone)]
+                    "description" => intermediate_rep.description.push(<String as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
+                    "tags" => return std::result::Result::Err("Parsing a container in this style is not supported in ContainerMetaResponse".to_string()),
+                    #[allow(clippy::redundant_clone)]
+                    "fileSizeInKb" => intermediate_rep.file_size_in_kb.push(<i64 as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
+                    #[allow(clippy::redundant_clone)]
+                    "duration" => intermediate_rep.duration.push(<f64 as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
+                    #[allow(clippy::redundant_clone)]
+                    "dateTimeCreated" => intermediate_rep.date_time_created.push(<chrono::DateTime::<chrono::Utc> as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
+                    #[allow(clippy::redundant_clone)]
+                    "dateTimeUpdated" => intermediate_rep.date_time_updated.push(<chrono::DateTime::<chrono::Utc> as std::str::FromStr>::from_str(val).map_err(|x| x.to_string())?),
+                    _ => return std::result::Result::Err("Unexpected key while parsing ContainerMetaResponse".to_string())
+                }
+            }
+
+            // Get the next key
+            key_result = string_iter.next();
+        }
+
+        // Use the intermediate representation to return the struct
+        std::result::Result::Ok(ContainerMetaResponse {
+            id: intermediate_rep
+                .id
+                .into_iter()
+                .next()
+                .ok_or_else(|| "id missing in ContainerMetaResponse".to_string())?,
+            title: intermediate_rep
+                .title
+                .into_iter()
+                .next()
+                .ok_or_else(|| "title missing in ContainerMetaResponse".to_string())?,
+            description: intermediate_rep.description.into_iter().next(),
+            tags: intermediate_rep.tags.into_iter().next(),
+            file_size_in_kb: intermediate_rep
+                .file_size_in_kb
+                .into_iter()
+                .next()
+                .ok_or_else(|| "fileSizeInKb missing in ContainerMetaResponse".to_string())?,
+            duration: intermediate_rep
+                .duration
+                .into_iter()
+                .next()
+                .ok_or_else(|| "duration missing in ContainerMetaResponse".to_string())?,
+            date_time_created: intermediate_rep.date_time_created.into_iter().next(),
+            date_time_updated: intermediate_rep.date_time_updated.into_iter().next(),
+        })
+    }
+}
+
+// Methods for converting between header::IntoHeaderValue<ContainerMetaResponse> and HeaderValue
+
+#[cfg(feature = "server")]
+impl std::convert::TryFrom<header::IntoHeaderValue<ContainerMetaResponse>> for HeaderValue {
+    type Error = String;
+
+    fn try_from(
+        hdr_value: header::IntoHeaderValue<ContainerMetaResponse>,
+    ) -> std::result::Result<Self, Self::Error> {
+        let hdr_value = hdr_value.to_string();
+        match HeaderValue::from_str(&hdr_value) {
+            std::result::Result::Ok(value) => std::result::Result::Ok(value),
+            std::result::Result::Err(e) => std::result::Result::Err(format!(
+                r#"Invalid header value for ContainerMetaResponse - value: {hdr_value} is invalid {e}"#
+            )),
+        }
+    }
+}
+
+#[cfg(feature = "server")]
+impl std::convert::TryFrom<HeaderValue> for header::IntoHeaderValue<ContainerMetaResponse> {
+    type Error = String;
+
+    fn try_from(hdr_value: HeaderValue) -> std::result::Result<Self, Self::Error> {
+        match hdr_value.to_str() {
+            std::result::Result::Ok(value) => {
+                match <ContainerMetaResponse as std::str::FromStr>::from_str(value) {
+                    std::result::Result::Ok(value) => {
+                        std::result::Result::Ok(header::IntoHeaderValue(value))
+                    }
+                    std::result::Result::Err(err) => std::result::Result::Err(format!(
+                        r#"Unable to convert header value '{value}' into ContainerMetaResponse - {err}"#
+                    )),
+                }
+            }
+            std::result::Result::Err(e) => std::result::Result::Err(format!(
+                r#"Unable to convert header: {hdr_value:?} to string: {e}"#
+            )),
+        }
+    }
 }
 
 #[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize, validator::Validate)]
