# crates/rest-handlers/generated/rest-server/src/server/mod.rs
@@ -31,9 +31,10 @@ where
     Router::new()
         .route("/blobs", post(upload_blob::<I, A, E>))
         .route(
-            "/blobs/{container_meta_id}",
+            "/blobs/{id}",
             delete(delete_blob::<I, A, E>).get(download_blob::<I, A, E>),
         )
+        .route("/blobs/{id}/metadata", get(get_blob_metadata::<I, A, E>))
         .with_state(api_impl)
 }
 
@@ -45,7 +46,7 @@ fn delete_blob_validation(
 
     Ok((path_params,))
 }
-/// DeleteBlob - DELETE /blobs/{container_meta_id}
+/// DeleteBlob - DELETE /blobs/{id}
 #[tracing::instrument(skip_all)]
 async fn delete_blob<I, A, E>(
     method: Method,
@@ -113,7 +114,7 @@ fn download_blob_validation(
 
     Ok((path_params,))
 }
-/// DownloadBlob - GET /blobs/{container_meta_id}
+/// DownloadBlob - GET /blobs/{id}
 #[tracing::instrument(skip_all)]
 async fn download_blob<I, A, E>(
     method: Method,
@@ -182,30 +183,22 @@ where
     })
 }
 
-#[derive(validator::Validate)]
-#[allow(dead_code)]
-struct UploadBlobBodyValidator<'a> {
-    body: &'a [u8],
-}
-
 #[tracing::instrument(skip_all)]
-fn upload_blob_validation(
-    query_params: models::UploadBlobQueryParams,
-    body: Bytes,
-) -> std::result::Result<(models::UploadBlobQueryParams, Bytes), ValidationErrors> {
-    query_params.validate()?;
+fn get_blob_metadata_validation(
+    path_params: models::GetBlobMetadataPathParams,
+) -> std::result::Result<(models::GetBlobMetadataPathParams,), ValidationErrors> {
+    path_params.validate()?;
 
-    Ok((query_params, body))
+    Ok((path_params,))
 }
-/// UploadBlob - POST /blobs
+/// GetBlobMetadata - GET /blobs/{id}/metadata
 #[tracing::instrument(skip_all)]
-async fn upload_blob<I, A, E>(
+async fn get_blob_metadata<I, A, E>(
     method: Method,
     TypedHeader(host): TypedHeader<Host>,
     cookies: CookieJar,
-    QueryExtra(query_params): QueryExtra<models::UploadBlobQueryParams>,
+    Path(path_params): Path<models::GetBlobMetadataPathParams>,
     State(api_impl): State<I>,
-    body: Bytes,
 ) -> Result<Response, StatusCode>
 where
     I: AsRef<A> + Send + Sync,
@@ -213,12 +206,11 @@ where
     E: std::fmt::Debug + Send + Sync + 'static,
 {
     #[allow(clippy::redundant_closure)]
-    let validation =
-        tokio::task::spawn_blocking(move || upload_blob_validation(query_params, body))
-            .await
-            .unwrap();
+    let validation = tokio::task::spawn_blocking(move || get_blob_metadata_validation(path_params))
+        .await
+        .unwrap();
 
-    let Ok((query_params, body)) = validation else {
+    let Ok((path_params,)) = validation else {
         return Response::builder()
             .status(StatusCode::BAD_REQUEST)
             .body(Body::from(validation.unwrap_err().to_string()))
@@ -227,14 +219,156 @@ where
 
     let result = api_impl
         .as_ref()
-        .upload_blob(&method, &host, &cookies, &query_params, &body)
+        .get_blob_metadata(&method, &host, &cookies, &path_params)
         .await;
 
     let mut response = Response::builder();
 
     let resp = match result {
         Ok(rsp) => match rsp {
-            apis::default::UploadBlobResponse::Status201_Created(body) => {
+            apis::default::GetBlobMetadataResponse::Status200_OK(body) => {
+                let mut response = response.status(200);
+                {
+                    let mut response_headers = response.headers_mut().unwrap();
+                    response_headers
+                        .insert(CONTENT_TYPE, HeaderValue::from_static("application/json"));
+                }
+
+                let body_content = tokio::task::spawn_blocking(move || {
+                    serde_json::to_vec(&body).map_err(|e| {
+                        error!(error = ?e);
+                        StatusCode::INTERNAL_SERVER_ERROR
+                    })
+                })
+                .await
+                .unwrap()?;
+                response.body(Body::from(body_content))
+            }
+            apis::default::GetBlobMetadataResponse::Status404_NotFound => {
+                let mut response = response.status(404);
+                response.body(Body::empty())
+            }
+        },
+        Err(why) => {
+            // Application code returned an error. This should not happen, as the implementation should
+            // return a valid response.
+            return api_impl
+                .as_ref()
+                .handle_error(&method, &host, &cookies, why)
+                .await;
+        }
+    };
+
+    resp.map_err(|e| {
+        error!(error = ?e);
+        StatusCode::INTERNAL_SERVER_ERROR
+    })
+}
+
+#[derive(validator::Validate)]
+#[allow(dead_code)]
+struct UploadBlobBodyValidator<'a> {
+    body: &'a [u8],
+}
+
+#[tracing::instrument(skip_all)]
+fn upload_blob_validation(
+    header_params: models::UploadBlobHeaderParams,
+    body: Bytes,
+) -> std::result::Result<(models::UploadBlobHeaderParams, Bytes), ValidationErrors> {
+    header_params.validate()?;
+
+    Ok((header_params, body))
+}
+/// UploadBlob - POST /blobs
+#[tracing::instrument(skip_all)]
+async fn upload_blob<I, A, E>(
+    method: Method,
+    TypedHeader(host): TypedHeader<Host>,
+    cookies: CookieJar,
+    headers: HeaderMap,
+    State(api_impl): State<I>,
+    body: Bytes,
+) -> Result<Response, StatusCode>
+where
+    I: AsRef<A> + Send + Sync,
+    A: apis::default::Default<E> + Send + Sync,
+    E: std::fmt::Debug + Send + Sync + 'static,
+{
+    // Header parameters
+    let header_params = {
+        let header_content_disposition =
+            headers.get(HeaderName::from_static("content-disposition"));
+
+        let header_content_disposition = match header_content_disposition {
+            Some(v) => match header::IntoHeaderValue::<String>::try_from((*v).clone()) {
+                Ok(result) => result.0,
+                Err(err) => {
+                    return Response::builder()
+                        .status(StatusCode::BAD_REQUEST)
+                        .body(Body::from(format!(
+                            "Invalid header Content-Disposition - {err}"
+                        )))
+                        .map_err(|e| {
+                            error!(error = ?e);
+                            StatusCode::INTERNAL_SERVER_ERROR
+                        });
+                }
+            },
+            None => {
+                return Response::builder()
+                    .status(StatusCode::BAD_REQUEST)
+                    .body(Body::from("Missing required header Content-Disposition"))
+                    .map_err(|e| {
+                        error!(error = ?e);
+                        StatusCode::INTERNAL_SERVER_ERROR
+                    });
+            }
+        };
+
+        models::UploadBlobHeaderParams {
+            content_disposition: header_content_disposition,
+        }
+    };
+
+    #[allow(clippy::redundant_closure)]
+    let validation =
+        tokio::task::spawn_blocking(move || upload_blob_validation(header_params, body))
+            .await
+            .unwrap();
+
+    let Ok((header_params, body)) = validation else {
+        return Response::builder()
+            .status(StatusCode::BAD_REQUEST)
+            .body(Body::from(validation.unwrap_err().to_string()))
+            .map_err(|_| StatusCode::BAD_REQUEST);
+    };
+
+    let result = api_impl
+        .as_ref()
+        .upload_blob(&method, &host, &cookies, &header_params, &body)
+        .await;
+
+    let mut response = Response::builder();
+
+    let resp = match result {
+        Ok(rsp) => match rsp {
+            apis::default::UploadBlobResponse::Status201_Created { body, location } => {
+                if let Some(location) = location {
+                    let location = match header::IntoHeaderValue(location).try_into() {
+                        Ok(val) => val,
+                        Err(e) => {
+                            return Response::builder()
+                                                                    .status(StatusCode::INTERNAL_SERVER_ERROR)
+                                                                    .body(Body::from(format!("An internal server error occurred handling location header - {e}"))).map_err(|e| { error!(error = ?e); StatusCode::INTERNAL_SERVER_ERROR });
+                        }
+                    };
+
+                    {
+                        let mut response_headers = response.headers_mut().unwrap();
+                        response_headers.insert(HeaderName::from_static("location"), location);
+                    }
+                }
                 let mut response = response.status(201);
                 {
                     let mut response_headers = response.headers_mut().unwrap();
